Version 6.9.1
- Fixed initialization of boolean types
- Reduced storage size required for boolean types

Version 6.9.0
- Added new optimization to merge duplicate functions (only at -O2, and so far only works for small functions)
- Extract side effects in more cases to avoid errors with ++,-- in complex expressions
- Fixed some nucode compilation problems with the C test suite
- Fixed failure to allocate memory for local variables in some cases
- Fixed incorrect removal of some functions that were not completely inlined
- Fixed sizeof() for boolean types
- Fixed incorrect test for 16 bit multiplies on P2
- Fixed a problem with CASE statements in Spin (thanks again, Ada!)
- Updated SD card code to work better and in more configurations (thanks to Evan and Ada)

Version 6.8.1
- Fixed using new keywords like `bytes` in parameters with default values

Version 6.8.0
- Added support for `%"xyzw"` constants in Spin2
- Added locking for host file system I/O
- Added `--compress` flag to compress binaries (courtesy of Ada)
- Fixed incorrect inline assembly for `#outb` and other hw registers
- Made `@foo.bar` work when `bar` is a label
- Supported PNut v43 `{Spin2_vNN}` version comments

Version 6.7.2
- Added putchar to libc.a
- Added another optimization for more AND x, #255 cases.

Version 6.7.1
- Added a memory read optimization in -O2, courtesy of Ada
- Added a peephole optimization for WRBYTE x,y after AND x,#255
- Fixed a problem in DEBUG() printing functions with multiple return values
- Fixed some 32/64 bit confusion in Spin comparison operators

Version 6.7.0
- Added new Spin2 lstring/bytes/words/longs keywords
- Added versioning for Spin2 language files, controlled by {$ver NN} or {vNN}
- Fixed potential bug in shl/shr peephole optimization
- Made SEND() work in the various bytecode interpreters
- More forceful warning for return without a declared result in Spin2
- Optimized 16 bit multiplications more often

Version 6.6.2